# limitless-cli

./: .envrc  .gitignore  LICENSE  Makefile  README.md  go.mod  limitless.py  pyproject.toml
.cursor/rules/: api-structure.mdc  caching-strategy.mdc
cmd/limitless/: main.go
docs/: api_reference.md  caching_strategy.md
internal/api/: client.go  highlevel.go  mock.go  pagination_test.go  types.go
internal/cache/: filesystem.go  filesystem_test.go  manager.go  manager_test.go  memory.go  streaming.go  streaming_test.go  types.go
internal/cli/: commands.go  mcp.go  mcp_test.go  root.go
internal/core/: constants.go  utils.go  utils_test.go
internal/output/: formatters.go
limitless_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: restructure_prd.md
src/limitless_cli/: __init__.py  cli.py
src/limitless_cli/api/: __init__.py  client.py  high_level.py
src/limitless_cli/api/transports/: __init__.py  base.py  http.py  memory.py  mock.py
src/limitless_cli/cache/: __init__.py  backend.py  manager.py
src/limitless_cli/cache/backends/: __init__.py  base.py  filesystem.py  memory.py
src/limitless_cli/cache/streaming/: __init__.py  base.py  bulk.py  (+2 more)
src/limitless_cli/cli/: __init__.py  commands.py  entry.py
src/limitless_cli/core/: __init__.py  constants.py  utils.py
src/limitless_cli/mcp/: __init__.py  server.py
src/limitless_cli/output/: __init__.py  formatters.py
tests/: test_cache_manager.py  test_mcp_server.py  test_streaming_bulk.py  test_streaming_common.py  test_streaming_daily.py  test_streaming_hybrid.py
