[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "limitless-cli"
version = "0.7.0"
description = "CLI utility for interacting with Limitless AI transcription device data"
authors = [
    {name = "Limitless AI"},
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25.0",
    "python-dateutil>=2.8.2",
    "tzdata>=2021.1; python_version < '3.9'"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.900",
    "types-requests>=2.25.0",
    "types-python-dateutil>=2.8.0"
]

[project.scripts]
limitless = "limitless:main"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
