[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limitless-cli"
version = "0.8.0"
description = "CLI & SDK for the Limitless AI lifelog API"
authors = [
    {name = "Limitless AI"},
]
requires-python = ">=3.9"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.900",
    "types-requests>=2.25.0",
    "types-python-dateutil>=2.8.0"
]

[project.scripts]
limitless = "limitless_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
